# daemon

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: deploy.yml  desktop-ci.yml  desktop-release.yml  release.yml
cmd/daemon-setup/: main.go
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: diagnostics.rs  mod.rs  ollama.rs  openclaw.rs  openrouter.rs  setup.rs
desktop/src/hooks/: useDiagnostics.ts  useOllama.ts  useOpenRouter.ts  useSettings.ts  useSetup.ts  useWhatsApp.ts
desktop/src/lib/: tauri.ts
docs/: 01-hardware.md  02-os-setup.md  02-ubuntu-server.md  02-windows-setup.md  02b-ubuntu-desktop.md  02b-windows-setup.md  03-ollama-llama.md  03-ollama-setup.md  03-openrouter-setup.md  03-post-install.md  04-daemon-bot.md  04-ollama-llama.md  04-security.md  05-daemon-bot.md  05-security.md  05-troubleshooting.md  06-next-steps.md  06-security.md  06-troubleshooting.md  07-next-steps.md  07-openclaw-automation.md  07-troubleshooting.md  08-distribution.md  08-next-steps.md  08-openclaw-automation.md  09-openclaw-automation.md  10-distribution.md  SPEC-desktop-app.md
internal/modelfile/: modelfile.go
internal/ollama/: ollama.go
internal/shell/: shell.go
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+65 files in other folders)
